# detective_finetune_lab

./: .gitignore  CDR_OLLAMA_Serve.cmd  README.md  SomeIMPROVEMENTS.md  pyproject.toml
data/cleaned/agatha_christie/poirot_investigates_by_agatha_christie/: chapter_01.txt  chapter_02.txt  (+9 more)
data/evaluation/: eval_prompt.jsonl  heldout_eval.jsonl
data/raw/holmes/: His last bow - Some later reminiscences of Sherlock Holmes by Arthur Conan Doyle.txt  The Return of Sherlock Holmes by Arthur Conan Doyle.txt  The Valley of Fear by Arthur Conan Doyle.txt
data/raw/poirot/: Poirot Investigates by Agatha Christie.txt  The Big Four by Agatha Christie.txt
data/rl/: deduction_prompts.jsonl
docs/: DataSet Quality Check.md
notebooks/: convert_to_gguf.ipynb  detective_finetune_lab.ipynb  synthetic_data_generation.ipynb
reports/: DataSet Quality Check.md  dataset_qa_report.md  detective_lab_dashboard.py
scripts/: chapters_2_jasonl.py  clean_books.py  dataset_quality_checker.py  datset_report.py  eval_judge.py  eval_qwen_detective.py  export_to_gguf.py  extract_books_chapters.py  generate_deductions_prompt.py  generate_synthetic_detective_data.py  last2books.py  prepare_books.py  rl_deduction_ppo.py  test.py  train_scout_unsloth.py  train_unsloth_config.py
scripts/config/: config_a100_32b_production.yaml  config_a100_80gb_fullblown.yaml  config_a10g_14b_train100.yaml  config_a10g_17b_scout_full.yaml  config_readme.md  config_t4_train100_no_evals.yaml  config_t4_train20_full_evals.yaml
scripts/tests/: test_train_dataset.py  test_unsloth_import.py  test_unsloth_smoke.py
(+165 files in other folders)
